--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,14 @@
             <artifactId>jstl</artifactId>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-jasper -->
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-jasper</artifactId>
+<!--            <version>10.1.0-M5</version>-->
+        </dependency>
+
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
